# MoneyRobert-Pro

./: .env.example  .gitignore  CODE_WIKI.md  FILE_INVENTORY.md  SYSTEM_IMPLEMENTATION.md  TEST_REPORT.md  docker-compose.prod.yml  docker-compose.yml  start-dev.bat  stop-dev.bat  test_runner.ps1  test_runner.sh  系统评估与演进规划.md
backend/: .env.example  Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/migrations/: 00000000000000_initial.sql  001_initial_schema.sql  002_additional_tables.sql  003_seed_data.sql  004_market_data_tables.sql  005_agent_system_tables.sql  006_api_keys_key_type.sql  007_debate_sessions_table.sql  008_analysis_interval.sql  009_decision_memory.sql  010_agent_accuracy_enhancement.sql  011_agent_performance_enhancement.sql  012_system_settings.sql  013_trading_simulation_backtest.sql  014_news_fetching.sql  015_memory_system_pgvector.sql  016_self_evolution_system.sql  017_feature_store_and_regime.sql  018_quantitative_foundations.sql  019_calibration_models.sql  020_attribution_and_alerts.sql  021_microstructure_data.sql  022_extended_indicators.sql  023_unified_execution.sql  024_history_backfill.sql  025_cross_exchange.sql  026_model_cards_and_counterfactuals.sql  027_missing_tables.sql  028_complete_missing_tables.sql  029_fix_missing_fields.sql  030_reports_schema_fix.sql  031_schema_consistency_fix.sql  032_win_rate_accuracy_fix.sql
backend/src/: auth.rs  backfill.rs  collector.rs  config.rs  data_quality.rs  error.rs  extractors.rs  lib.rs  logging.rs  microstructure.rs  middleware.rs  models.rs  schemas.rs  server.rs  state.rs  websocket.rs
backend/src/agents/: agents.rs  autonomous.rs  config.rs  debate.rs  decision_tuning.rs  errors.rs  evolution.rs  llm_client.rs  market.rs  memory.rs  mod.rs  models.rs  notification.rs  promotion.rs  risk.rs  simulation.rs
backend/tests/: agents.rs
(+232 files in other folders)
