[package]
name = "moneyrobert-rs"
version = "1.0.0"
edition = "2021"
authors = ["MoneyRobert Team <team@moneyrobert.com>"]
description = "MoneyRobert - Rust backend for investment strategy generation and execution system"
license = "MIT"

[[bin]]
name = "moneyrobert"
path = "src/bin/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = { version = "0.15", features = ["json"] }
dotenvy = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
validator = { version = "0.19", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
parking_lot = "0.12"
once_cell = "1.19"
axum-extra = { version = "0.10", features = ["typed-header"] }
headers = "0.4"
futures = "0.3"
bcrypt = "0.17"
tokio-cron-scheduler = "0.13"
aes-gcm = "0.10"
utoipa = { version = "5", features = ["axum_extras"] }
dashmap = "6"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[profile.release]
lto = "thin"
codegen-units = 16
strip = false
opt-level = 2

[profile.dev]
debug = true
split-debuginfo = "unpacked"
